fix z-index of dialog to be highest of possible layers

--- a/client/src/components/common/dialog/OneStopDialog.css
+++ b/client/src/components/common/dialog/OneStopDialog.css
@@ -7,7 +7,7 @@
 .onestop-dialog-element {
   font-size: 1em;
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 2000; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
